{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 52,
  "lineage": "86f859bb-f612-4620-80d8-955c34bfd07b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-26T08:33:56.259-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coinbreakr/global/firewalls/main-allow-app-port",
            "log_config": [],
            "name": "main-allow-app-port",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "priority": 1000,
            "project": "coinbreakr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/firewalls/main-allow-app-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "coinbreakr-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-26T08:33:56.265-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coinbreakr/global/firewalls/main-allow-http",
            "log_config": [],
            "name": "main-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "priority": 1000,
            "project": "coinbreakr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/firewalls/main-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "coinbreakr-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-26T08:33:56.273-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coinbreakr/global/firewalls/main-allow-https",
            "log_config": [],
            "name": "main-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "priority": 1000,
            "project": "coinbreakr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/firewalls/main-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "coinbreakr-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-26T08:33:56.325-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coinbreakr/global/firewalls/main-allow-ssh",
            "log_config": [],
            "name": "main-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "priority": 1000,
            "project": "coinbreakr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/firewalls/main-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "coinbreakr-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/images/coinbreakr-c5988cd",
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coinbreakr/zones/us-central1-a/disks/coinbreakr-main-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coinbreakr/zones/us-central1-a/instances/coinbreakr-main-vm",
            "instance_id": "915856840688107904",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "BfblKbygjl0=",
            "name": "coinbreakr-main-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.188.9.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-1",
                "subnetwork_project": "coinbreakr"
              }
            ],
            "project": "coinbreakr",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/zones/us-central1-a/instances/coinbreakr-main-vm",
            "service_account": [
              {
                "email": "379416821819-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "coinbreakr-vm"
            ],
            "tags_fingerprint": "a5nWFNKfPwk=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.latest_coinbreakr",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "mtu": 0,
            "name": "main-coinbreakr-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "coinbreakr",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.203-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/coinbreakr/regions/us-central1/routers/main-router",
            "name": "main-router",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "project": "coinbreakr",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/routers/main-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:34:07.349-07:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-1",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "main-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.505-07:00",
            "gateway_address": "10.0.20.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-2",
            "ip_cidr_range": "10.0.20.0/24",
            "name": "main-private-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.256-07:00",
            "gateway_address": "10.0.30.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-3",
            "ip_cidr_range": "10.0.30.0/24",
            "name": "main-private-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-private-subnet-3",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.214-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "main-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.280-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "main-public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-26T08:33:56.233-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-3",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "main-public-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/coinbreakr/global/networks/main-coinbreakr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coinbreakr",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coinbreakr/regions/us-central1/subnetworks/main-public-subnet-3",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}